# iotsploit-usb

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
cmake/: iotsploit-usb-pico.cmake  usbscpi-pico.cmake
docs/: add-log-endpoint.md  butterfly-usbtmc-integration-plan.md  consolidate-examples-into-core-plan.md  esp32s3-ble-connect-pair.md  esp32s3-spp-security-usbtmc-plan.md  iotsploit-usb-rust-host-plan-updated.md  iotsploit-usb-rust-host-plan.md  migrate-scpi_compat-to-libscpi.md  refactor-examples-to-core.md
examples/: minimal_host.c
examples/butterfly-nrf52840/: Makefile  README.md  ble_sniff_handler.c  ble_sniff_handler.h  linker.ld  main.c  radio_ble.c  radio_ble.h  sdk_config.h  usb_descriptors.c
examples/esp32s3/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32s3-spp-security/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32s3-spp-security/main/: CMakeLists.txt  app_main.c  ble_spp_security.c  ble_spp_security.h  tusb_config.h
examples/esp32s3-spp-security/tools/: ble_security.py
examples/esp32s3/components/iotsploit-usb/: CMakeLists.txt
examples/esp32s3/host/: scan_test.py
examples/esp32s3/main/: CMakeLists.txt  app_main.c  ble_conn.c  ble_conn.h  ble_scan.c  ble_scan.h  idf_component.yml  tusb_config.h  wifi_scan.c  wifi_scan.h
examples/host-rs/: Cargo.toml  README.md
examples/host-rs/src/: block.rs  headers.rs  lib.rs  session.rs  transport.rs  usbtmc_kernel.rs
examples/nrf52840/: Makefile  ble_conn_handler.c  ble_conn_handler.h  ble_scan_handler.c  ble_scan_handler.h  ble_scan_test.sh  flash_all.jlink  linker.ld  main.c  sdk_config.h  tusb_config.h  usb_descriptors.c
examples/pico2/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
examples/stm32f4disco/: Makefile  README.md  linker.ld  main.c  openocd.cfg  stm32f4xx.h  tusb_config.h  usb_descriptors.c
glue/: usbscpi_tinyusb.c  usbscpi_tinyusb.h
helpers/: ring_buffer.c
host/: README.md
host/rust/: Cargo.toml  README.md
host/rust/profiles/: esp32s3.txt  nrf52840.txt
host/rust/src/: caps.rs  descriptor.rs  headers.rs  lib.rs  usbtmc_raw.rs  workflow.rs
include/scpi/: scpi.h
include/usbscpi/: ring_buffer.h  usbscpi.h
src/: scpi_compat.c  usbscpi.c
tests/: test_glue_tinyusb.c  test_usbscpi.c
tests/stub/: tusb.h
