[package]
name = "iotsploit-host"
version = "0.1.0"
edition = "2021"
description = "Generic SCPI-over-USBTMC host for iotsploit-usb devices"
license = "MIT"

[lib]
name = "iotsploit_host"
path = "src/lib.rs"

[[bin]]
name = "iotsploit-host"
path = "src/bin/iotsploit-host.rs"

[profile.release]
opt-level = 2
